--- a/report.Rmd
+++ b/report.Rmd
@@ -1,6 +1,6 @@
 ---
 title: Three sets of random numbers
-author: You
+author: Yixuan He
 output: html_document
 ---
 
@@ -26,6 +26,11 @@ random_numbers2 <- readRDS(
 random_numbers3 <- readRDS(
   here::here("output/random_numbers3.rds")
 )
+#! TO DO: 
+#!   read random_numbers4 from output directory
+random_numbers4 <- readRDS(
+  here::here("output/random_numbers4.rds")
+)
 ```
 
 # Random numbers 1
@@ -48,3 +53,9 @@ hist(random_numbers2)
 #| fig.cap = "Third set of random numbers"
 hist(random_numbers3)
 ```
+
+# Random numbers 4
+
+```{r, random-numbers4-histogram}
+#| fig.cap = "Fourth set of random numbers"
+hist(random_numbers4)
